test/force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>Relevant surveys for a particular property</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Survey Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>