test/force-app/main/default/objects/Survey__c/fields/Field_Work_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Field_Work_Completed_Date__c</fullName>
    <description>Date Field work was completed</description>
    <inlineHelpText>Date Field work was completed</inlineHelpText>
    <label>Field Work Completed Date</label>
    <type>Date</type>
</CustomField>