test/force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Survey Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Development_Item__c.Type__c</field>
            <operation>equals</operation>
            <value>Survey</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Development_Item__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>